clicking fingernails changes decals

--- a/client/public/assets/css/custom.scss
+++ b/client/public/assets/css/custom.scss
@@ -5,7 +5,11 @@
 	}
 	.fingernail{
 		position: absolute;
-		margin: 15px;
+		min-width: 50px;
+		min-height: 55px;
+		padding-top: 15px;
+		border: 1px solid red;
+		text-align: center;
 		img {
 			max-width: 25px;
 			transform: rotate(180deg);
@@ -14,31 +18,35 @@
 
 	.thumb {
 		top: 245px;
-		left: 0px;
+		left: 5px;
+		min-width: 60px;
+		min-height: 60px;
 		-ms-transform: rotate(-40deg); /* IE 9 */
     -webkit-transform: rotate(-40deg); /* Chrome, Safari, Opera */
     transform: rotate(-40deg);
-    img {max-width: 30px;}
+    img {
+    	max-width: 30px;
+    }
 	}
 
 	.pointer {
-		top: 48px;
-		left: 82px;
+		top: 45px;
+		left: 83px;
 	}
 
 	.middle {
-		top: 8px;
-		left: 137px;
+		top: 4px;
+		left: 138px;
 	}
 
 	.ring {
-		top: 25px;
-		left: 190px;
+		top: 22px;
+		left: 192px;
 	}
 
 	.pinky {
-		top: 70px;
-		left: 245px;
+		top: 68px;
+		left: 247px;
 	}
 
 }
