began work on fingernail polish colorpicker, need to finish updating actual fingernail divs

--- a/client/public/assets/css/custom.scss
+++ b/client/public/assets/css/custom.scss
@@ -9,6 +9,7 @@
 		min-height: 55px;
 		padding-top: 15px;
 		text-align: center;
+		border: 1px red solid;
 		img {
 			max-width: 25px;
 			transform: rotate(180deg);
